mod8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-server
spec:
  type: ClusterIP
  ports:
    - port: 1880
      protocol: TCP
      name: demo
  selector:
    app: demo-server
